fix notodos text alignment

--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -14,3 +14,8 @@
     list-style: none;
     padding: 0;
 }
+
+.noTodos {
+    text-align: center;
+    font-weight: 600;
+}
